<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyboard"
    tools:context=".Activity.ProfileEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="35dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/perbarui_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="@string/perbarui_profil"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            />

        <ImageView
            android:id="@+id/edit_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/userphoto"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:background="@drawable/edit_text_style"
            android:id="@+id/edit_nama_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPersonName"
            android:hint="@string/nama_lengkap"
            android:layout_marginBottom="12dp"
            />


        <EditText
            android:background="@drawable/edit_text_style"
            android:id="@+id/edit_nomor_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPhonetic"
            android:layout_marginBottom="12dp"
            android:hint="@string/nomor_telpon" />


        <Button
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/button_edit_profile_confirm"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="0.26"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>