<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyboard"
    tools:context=".Activity.UserAuth.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp">

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/registrasi"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/add_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/userphoto" />

        <EditText
            android:id="@+id/regist_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_style"
            android:ems="20"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/regist_nomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_style"
            android:ems="20"
            android:hint="@string/nomor_telpon"
            android:inputType="textPhonetic" />

        <EditText
            android:id="@+id/regist_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_style"
            android:ems="20"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_style"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_regist_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_regisstrasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_style"
            android:paddingHorizontal="20dp"
            android:text="@string/registrasi"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/TextRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="Sudah punya akun? Login"
            android:textColor="@color/colorPrimary" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="0.26" />

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>